como se ha podido. Todo final

--- a/PYTHON/Datos/evaluacion-python-2.ipynb
+++ b/PYTHON/Datos/evaluacion-python-2.ipynb
@@ -94,6 +94,10 @@
     "\n",
     "                return fichero_palabras \n",
     "    \n",
+    "    \n",
+    "    # Con este método me atasqué muchísimo. Tenía una ligera idea, pero no era capaz de plasmarla. Tras varias búsquedas, lecturas de código, decidí plasmar\n",
+    "    #aquí algo sencillo, pero no corresponde con lo que se solicita del ejercicio.\n",
+    "    \n",
     "    def leer_lineas(self, num_palabras):\n",
     "        \"\"\"Esta función permite leer el número de líneas especificado por el usuario en el input (tipo integer).\"\"\"\n",
     "\n",
